apps/websoft9/AWS/main.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation template to launch an Ubuntu 22.04 EC2 instance in a specified VPC and subnet with a security group allowing ports 22, 80, 443, and 9000-9999.",
    "Parameters": {
        "VpcId": {
            "Description": "The VPC ID where the instance will be launched",
            "Type": "AWS::EC2::VPC::Id"
        },
        "SubnetId": {
            "Description": "The Subnet ID where the instance will be launched",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "InstanceType": {
            "Description": "EC2 instance type",
            "Type": "String",
            "Default": "t3.medium",
            "ConstraintDescription": "must be a valid EC2 instance type."
        },
        "KeyName": {
            "Description": "The name of the EC2 Key Pair to allow SSH access to the instance",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
        },
        "AmiAlias": {
            "Description": "AMI alias",
            "Type": "String"
        }
    },
    "Resources": {
        "WebServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH, HTTP, HTTPS, and custom ports 9000-9999",
                "VpcId": {
                    "Ref": "VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 9000,
                        "ToPort": 9999,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "EC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "ImageId": {
                    "Fn::Sub": "resolve:ssm:${AmiAlias}"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "SubnetId"
                        },
                        "GroupSet": [
                            {
                                "Ref": "WebServerSecurityGroup"
                            }
                        ]
                    }
                ]
            }
        }
    },
    "Outputs": {
        "InstanceId": {
            "Description": "The Instance ID of the newly created EC2 instance",
            "Value": {
                "Ref": "EC2Instance"
            }
        },
        "PublicIP": {
            "Description": "The public IP address of the EC2 instance",
            "Value": {
                "Fn::GetAtt": [
                    "EC2Instance",
                    "PublicIp"
                ]
            }
        }
    }
}
